test/errors/type/collections/set/__bandnot2.yasl
echo collections.set().__bandnot(1, collections.set())
